# TranslationPatcher

./: .gitignore  CREDITS.md  README.md  beet.yaml  beet_pipeline.py  game_data_extractor.py  lore_replacements.csv  name_replacements.csv  new_chest_data.txt  old_chest_data.txt  pyproject.toml
src/data/gm4_translation_patcher/functions/: load.mcfunction  main.mcfunction  run.mcfunction
src/data/gm4_translation_patcher/functions/lore/: next_line.mcfunction  start.mcfunction
src/data/gm4_translation_patcher/functions/player_inv/: process_all_slots.mcfunction  store_text.mcfunction
src/data/gm4_translation_patcher/functions/player_inv/slots/: all.mcfunction  check_slot.mcfunction  next.mcfunction  offhand.mcfunction  skip.mcfunction  skip_and_check_slot.mcfunction
src/data/gm4_translation_patcher/functions/player_inv/slots/armor/: chest.mcfunction  feet.mcfunction  head.mcfunction  legs.mcfunction  split.mcfunction
src/data/gm4_translation_patcher/functions/player_inv/slots/hotbar/: left.mcfunction  middle.mcfunction  right.mcfunction  split.mcfunction
src/data/gm4_translation_patcher/functions/player_inv/slots/inventory/: 0.mcfunction  1.mcfunction  10.mcfunction  11.mcfunction  12.mcfunction  13.mcfunction  14.mcfunction  15.mcfunction  16.mcfunction  17.mcfunction  18.mcfunction  19.mcfunction  2.mcfunction  20.mcfunction  21.mcfunction  22.mcfunction  23.mcfunction  24.mcfunction  25.mcfunction  26.mcfunction  3.mcfunction  4.mcfunction  5.mcfunction  (+4 more)
src/data/gm4_translation_patcher/item_modifiers/: main.json
src/data/minecraft/tags/functions/: load.json
(+12 files in other folders)
