[tool.poetry]
name = "translationpatcher"
version = "0.1.0"
description = ""
authors = ["SpecialBuilder <specialbuilder32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beet = "^0.86.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
